--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application android:label="@string/app_name"
                  android:icon="@drawable/ic_launcher">
-        <activity android:name="SplashActivity"
+        <activity android:name="LoginActivity"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
@@ -21,7 +21,7 @@
         <activity android:name="MyActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name="KaKaLauncherActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name=".MainActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
-        <activity android:name=".LoginActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
+        <activity android:name=".SplashActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name=".SettingActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
 
 
