注册页面UI 简单逻辑

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,13 +18,13 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".registerActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
+
         <activity android:name="MyActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name="KaKaLauncherActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name=".MainActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name=".SplashActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name=".SettingActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
-
-
 
     </application>
 </manifest>
