--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <user-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
     <application android:label="@string/app_name"
                  android:icon="@drawable/ic_launcher">
