--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,22 +13,24 @@
 
     <application android:label="@string/app_name"
                  android:icon="@drawable/ic_launcher">
-        <activity android:name="LoginActivity"
-                  android:label="@string/app_name"
-                  android:theme="@android:style/Theme.NoTitleBar">
+        <activity android:name="LogoActivity"
+                  android:theme="@android:style/Theme.NoTitleBar"
+                  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <activity android:name=".registerActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
-
+        <activity android:name="MainActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name="MyActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name="KaKaLauncherActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
-        <activity android:name=".MainActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
+        <activity android:name=".LoginActivity" android:theme="@android:style/Theme.NoTitleBar" android:windowSoftInputMode="adjustResize"></activity>
+        <activity android:name=".registerActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name=".SplashActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name=".SettingActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
+        <activity android:name=".PersonalInfos" android:theme="@android:style/Theme.NoTitleBar"></activity>
+
 
     </application>
 </manifest>
