列表初始化加载及用户信息修改逻辑开发

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,10 @@
         <activity android:name=".SplashActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name=".SettingActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name=".PersonalInfos" android:theme="@android:style/Theme.NoTitleBar"></activity>
+        <activity android:name=".PersonalInfoChangeActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
+
+
+
 
 
     </application>
