切换效果 心逻辑添加

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,6 +36,9 @@
         <activity android:name=".PersonalInfoChangeActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
 
 
+        <activity android:name=".WebViewActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
+
+
 
 
 
