详情页 二维码添加

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,12 +35,12 @@
         <activity android:name=".PersonalInfos" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name=".PersonalInfoChangeActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
 
+        <activity android:name=".DoctorDetailActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
+        <activity android:name=".ShipCardDetailActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
+
 
         <activity android:name=".WebViewActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
-
-
-
-
+        <activity android:name="com.zbar.lib.CaptureActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
 
     </application>
 </manifest>
