--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,15 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <user-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application android:label="@string/app_name"
                  android:icon="@drawable/ic_launcher">
         <activity android:name="LogoActivity"
@@ -41,6 +50,7 @@
 
         <activity android:name=".WebViewActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name="com.zbar.lib.CaptureActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
+
 
     </application>
 </manifest>
