--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -69,6 +69,11 @@
         <activity android:name=".DoctorDetailActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name=".ShipCardDetailActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
 
+        <activity android:name=".PayHistoryList" android:theme="@android:style/Theme.NoTitleBar"></activity>
+
+        <activity android:name=".HealthListActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
+
+
 
         <activity android:name=".WebViewActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name="com.zbar.lib.CaptureActivity" android:theme="@android:style/Theme.NoTitleBar"></activity>
